# script-kit-next

./: .gitignore  .gitmodules  .impeccable.md  .last-cleanup  .mdflow-eval-runs.jsonl  .mdflow.yaml  .oracle-impl-accent-borders.md  .oracle-impl-cmdw.md  .vibrancy.md  AGENTS.md  BUNDLING.md  CLAUDE.md  CLEANUP.md  CODEMAP.md  CONTEXT.md  Cargo.toml  DESIGNING_POPUP_WINDOWS.md  DEV.md  DICTATION_ESCAPE_ANALYSIS.md  EDITOR_PLAN.md  FEATURES.md  FEATURE_MAP.md  GLOSSARY.md  GPUI_RECOMMENDATIONS.md  HOW_TO_AUTOMATE.md  LICENSE-APACHE  LIGHT_THEME.md  MCP.md  MENU_PLAN.md  Makefile  NEW_NOTE_PLAN.md  POLISH.md  PRODUCT.md  QA.md  QA_AGENT_CHAT.md  RAYCAST_PARITY.md  README.md  RELEASE.md  TAHOE.md  TODO.md  (+37 more)
.afk/: 20260422T015359Z-run10-cross-surface-afk-prompt.md  per-tick-codex.md
.agent-prompts/: filter-ux-visual-fusion.md  main-input-benchmark-fusion.md
.agent-reports/: dt-mention-1779163730-acp-mention-verify.json  dt-mention-1779163794-verify.json  mcp-capabilities-2026-05-18.md  mention-token-acp-verify-20260518.json  mention-token-acp-verify-20260518.md  mention-token-devtools-verify-20260518.md  mention-token-dt-20260518-210125-acp-baseline.json  mention-token-dt-20260518-210125-act-at.json  mention-token-dt-20260518-210125-inspect-ai.json  mention-token-dt-20260518-210125-inspect-baseline.json  mention-token-dt-20260518-210125-investigate.json  mention-token-dt-20260518-210125-targets.json  mention-token-dt-20260518-210329-final-acp.json  mention-token-dt-20260518-210407-final-acp.json  mention-token-dt-20260518-210453-batch.json  notes-mcp-roundtrip-2026-05-18.md  parallel-dt-proof-2026-05-18.md  todoist-demo-devtools-verify-2026-05-18.md
.ai/: file-index.json  roster.json
.antigravitycli/: ec1eb7d2-0d6f-40e2-8adb-980c50a16132.json
.archive/: dev-filter.sh
.cargo/: config.toml
.claude/: AUDIT-INDEX.md  GPUI_DOCUMENTATION_INDEX.md  GPUI_GOTCHAS_AND_PATTERNS.md  GPUI_QUICK_REFERENCE.md  GPUI_RESEARCH_SOURCES.md  GPUI_RESEARCH_SUMMARY.md  audit-acp-rendering.md  crate-research.md  (+9 more)
crates/ghost-llm-helper/: Cargo.toml
crates/ghost-llm-helper/src/: llama_engine.rs  main.rs
oracle/macos-ax-gpui/: Cargo.toml  README.md
oracle/macos-ax-gpui/examples/: focused_tree.rs  observe_focused_app.rs  press_menu_item.rs  snap_focused_window.rs  text_selection.rs  window_list.rs
oracle/macos-ax-gpui/src/: gpui_bridge.rs  lib.rs
oracle/macos-ax-gpui/src/platform/: macos.rs  unsupported.rs
oracle/macos-screenshot-kit/: Cargo.toml  LICENSE-APACHE  README.md
oracle/macos-screenshot-kit/docs/: SCENARIOS.md
oracle/macos-screenshot-kit/examples/: capture_all.rs  capture_region.rs  capture_window.rs  capture_with_cursor.rs  copy_frontmost_to_clipboard.rs  exclude_current_process.rs  interactive_selection.rs  interactive_toolbar.rs  list_windows.rs  raw_pixels.rs  touch_bar.rs
oracle/macos-screenshot-kit/src/: error.rs  lib.rs  types.rs
oracle/macos-screenshot-kit/src/platform/: mod.rs  unsupported.rs
oracle/macos-screenshot-kit/src/platform/macos/: cf.rs  ffi.rs  image.rs  mod.rs  quartz.rs  system_capture.rs
(+9195 files in other folders)
