[package]
name = "script-kit-gpui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "script-kit-gpui"
path = "src/main.rs"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
global-hotkey = "0.7"
notify = "6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "2.1"
