[package]
name = "script-kit-ghost-llm-helper"
version = "0.1.0"
edition = "2021"
publish = false
autobins = false

[[bin]]
name = "script-kit-ghost-llm-helper"
path = "src/main.rs"
test = false

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
llama-cpp-2 = { version = "0.1.146", default-features = false, features = ["metal", "sampler"] }
