[package]
name = "macos-screenshot-kit"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
authors = ["OpenAI"]
description = "A practical macOS screenshot library for displays, windows, regions, interactive picks, pixels, and files."
license = "MIT OR Apache-2.0"
repository = "https://example.invalid/macos-screenshot-kit"
keywords = ["macos", "screenshot", "screen-capture", "coregraphics", "screencapture"]
categories = ["api-bindings", "multimedia::images", "os::macos-apis"]

[features]
default = []
# Re-export the community ScreenCaptureKit bindings for consumers that need
# streaming, HDR, picker UI, IOSurface, or APIs newer than the CoreGraphics path.
screen-capture-kit = ["dep:screencapturekit"]

[dependencies]
screencapturekit = { version = "1", optional = true }

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"
targets = ["x86_64-apple-darwin", "aarch64-apple-darwin"]
features = ["screen-capture-kit"]
